# syncflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03157b18d2f2_update_document_model.py  113013c32bf1_add_document_author_model.py  3df19783335b_add_session_model_and_update_user_model.py  569cedde0cd4_add_document_model.py  6e7c94d195f1_add_user_model.py  737d14261a36_add_document_member_model.py  7a2f2be78e4c_update_document_model.py  910e5add7801_add_document_model.py  960e2eff7381_update_session_model.py  adff5ed1ff27_add_document_model.py  dcfca697e778_add_document_author_model.py  e6c926cc3d96_add_document_model.py  f703f44fbfae_add_document_model.py  fff6761e9047_add_room_model.py
app/: main.py
app/api/: __init__.py  account.py  auth.py  deps.py  document.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  auth.py  document.py  session.py
app/schemas/: auth.py  document.py
app/services/: account.py  auth.py  document.py  root.py
app/utils/: db_helpers.py  url.py  validators.py
static/css/: global.css  output.css
static/js/: global.js
templates/: base_layout.html  layout.html  sidebar_layout.html
templates/components/: account_info_card.html  active_members.html  back_button.html  doc_card.html  doc_dropdown.html  doc_header.html  doc_name.html  doc_sort.html  docs_table.html  header.html  header_user.html  messages.html  more_options.html  new_dropdown.html  pagination.html  (+1 more)
(+9 files in other folders)
