[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "websockets>=16.0",
]
